lib/tests/fixtures/compiler/parser/ineffective_in_if.baseline
Error: ineffective_in_if.pp:1:1: ineffective statements may only appear as the last statement at top-level or inside functions and conditional expressions.
  if true {
  ^~~~~~~~~
