lib/tests/fixtures/compiler/parser/ineffective_in_if.pp
if true {
    [1] + [$a = 2]
}
notice last
